[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "syedshahmirsultan", email = "syedshahmirsultan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test = "agenticai:main"
agent = "agenticai.agents:main"
agent1 = "agenticai.agent1:main"
agent2 = "agenticai.agent2:history_run"
structured_response = "agenticai.structured_output:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
